--- a/115_rewrite.conf
+++ b/115_rewrite.conf
@@ -6,3 +6,4 @@
 
 ^https://115\.com/s/ url 302 oof.disk://openurl/https://115.com/s/
 ^https://115cdn\.com/s/ url 302 oof.disk://openurl/https://115.com/s/
+hostname = 115.com,115cdn.com 
