--- a/115_rewrite.conf
+++ b/115_rewrite.conf
@@ -3,7 +3,6 @@
 #!icon=https://raw.githubusercontent.com/chas0000/script/main/115生活.png
 #!homepage=https://github.com/chas0000/script/readme.md
 #!author=chas
-
-^https://115\.com/s/ url 302 oof.disk://openurl/https://115.com/s/
-^https://115cdn\.com/s/ url 302 oof.disk://openurl/https://115.com/s/
 hostname = 115.com,115cdn.com 
+^https:\/\/115\.com/s/ url 302 oof.disk://openurl/https://115.com/s/
+^https:\/\/115cdn\.com/s/ url 302 oof.disk://openurl/https://115.com/s/
